# media-juicer

./: .gitignore  Cargo.toml  README.md
legacy/: main.py  requirements.txt
legacy/src/: compress_image.py  compress_video.py  fix_dates.py  list_files.py  list_folders.py  mk_folder_if_not_exist.py  parse_args.py  rename_file.py  utils.py
src/: config.rs  error.rs  external_apps.rs  fs_discovery.rs  image_processing.rs  lib.rs  main.rs  media_kind.rs  mk_folder_if_not_exist.rs  planning.rs  progress.rs  selection.rs  timestamps.rs  video_processing.rs
src/app/: execute.rs
src/core/: cli.rs  config.rs  mod.rs  planning.rs  selection.rs
src/io/: fs_discovery.rs  fs_ops.rs  list_files.rs  mod.rs
src/media/: image_processing.rs  media_kind.rs  mod.rs  video_processing.rs
src/time/: exif_dates.rs  fix_dates.rs  mod.rs  timestamp_policy.rs
tests/: cli_end_to_end.rs  fixdates_mixed_media.rs  fixdates_no_output_tree.rs  fixdates_video.rs  images_pipeline.rs  videos_replace_behavior.rs  videos_timestamp_preservation.rs
tests/common/: mod.rs
