[package]
name = "media-juicer"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[lib]
name = "media_juicer"
path = "src/lib.rs"

[[bin]]
name = "media-juicer"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["std"] }
filetime = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
image = { version = "0.25", default-features = true, features = ["jpeg", "png", "bmp", "webp"] }
kamadak-exif = "0.6"
webp = "0.3"

[dev-dependencies]
tempfile = "3"
